--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="email">EMAIL</string>
     <string name="call">CALL</string>
     <string name="navigate">NAVIGATE</string>
+    <string name="option_circular_demo">Circular Demo</string>
 </resources>
